# fuckport

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: list_processes.rs  parse_targets.rs
src/: cli.rs  input.rs  interactive.rs  killer.rs  lib.rs  main.rs  process.rs
tests/: cli_help.rs
