[package]
name = "fuckport"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A CLI for killing processes by PID, name, or port."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Super1Windcloud/fuckport"
homepage = "https://github.com/Super1Windcloud/fuckport"
documentation = "https://docs.rs/fuckport"
keywords = ["cli", "process", "kill", "port", "sysadmin"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "examples/**", "tests/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
default-run = "fuckport"

[[bin]]
name = "fuckport"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = "0.12.0"
netstat2 = "0.11.2"
sysinfo = "0.38.4"
