[package]
name = "fuckport"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
description = "A CLI for killing processes by PID, name, or port."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Super1Windcloud/fuckport"
homepage = "https://github.com/Super1Windcloud/fuckport"
documentation = "https://docs.rs/fuckport"
keywords = ["cli", "process", "kill", "port", "sysadmin"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "examples/**", "tests/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
default-run = "fuckport"

[[bin]]
name = "fuckport"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29.0"
netstat2 = "0.11.2"
ratatui = "0.30.0"
sysinfo = "0.38.4"
unicode-width = "0.2.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }


[profile.dev]
debug = 0

#最快编译时间
[profile.release]
lto = false
codegen-units = 256
panic = "abort"
debug = 0
